--- a/static/index.html
+++ b/static/index.html
@@ -4,8 +4,117 @@
   	<title>Star-ho</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
+    
+    <script src="//code.jquery.com/jquery-3.3.1.js"></script>
+    <link rel="stylesheet" href="/css/main.css">   
+     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
+    <script>
+      function logout(){
+        sessionStorage.removeItem('token')
+        location.href='/'
+        //jwt 제거하는거 요청해야함----------
+      }
+      function toCreatePage(){
+        fetch("/profile",{
+          method : "GET",
+          headers: {
+            "Content-Type": "application/json",
+            "Authorization" : sessionStorage.getItem('token')
+          }
+          })
+        .then(function (res){
+          if(res.status==200){
+            location.href='/board/create';
+          }else{
+          alert("로그인 해주시기 바랍니다")
+        }
+      })
+    }
+    (async () =>{
+      fetch("/board/list",{
+        method : "GET",
+        headers: {
+          "Content-Type": "application/json",
+          "Authorization" : sessionStorage.getItem('token')
+        }
+        })
+      .then(res=>res.json())
+      .then(res=>{
+        let thead=$('#thead')
+        let li = $('<tr>')
+        let id = $('<th>')
+        let title = $('<th>')
+        let createdAt = $('<th>')
+        id.css('width',"70")
+        id.css('text-align',"center")
+        createdAt.css('text-align',"center")
+        title.css('text-align',"center")
+        title.css('width',"280")
+        id.text('no')
+        title.text('제목')
+        createdAt.text('날짜')
+        li.append(id).append(title).append(createdAt)
+        thead.append(li)
+        let tbody=$('#tbody')
+        let len=res.length>6?6:res.length;
+        for (let i = 0; i <len ; i++) {
+          let li = $('<tr>')
+          li.addClass("cursor_test")
+          let id = $('<th >')
+          let title = $('<th >')
+          let createdAt = $('<th >')
+          id.css('width',"70")
+          id.css('text-align',"center")
+          createdAt.css('text-align',"center")
+          title.css('width',"280")
+          id.text(res[i].id)
+          title.text(res[i].title)
+          createdAt.text(''+new Date(res[i].createdAt).getFullYear()+'.'+(new Date(res[i].createdAt).getMonth()+1)+'.'+new Date(res[i].createdAt).getDate())
+          li.append(id).append(title).append(createdAt)
+          tbody.append(li)
+          }
+          clickTr();
+      })
+    })()
+    </script>
+      <script>
+      (async () => {
+        let res = await fetch("/profile",{
+          method : "GET",
+          headers: {
+            "Content-Type": "application/json",
+            "Authorization" : sessionStorage.getItem('token')
+          },
+        }).then(res=>res.json())
+        if(res.username){  
+          $('#signup').remove();
+          $('#login').remove();
+        }else{
+          $('#logout').remove();
+          $('#profile').remove()
+        }
+      })()
+        async function profile(){
+        let res =  await fetch("/profile",{
+            method : "GET",
+            headers: {
+              "Content-Type": "application/json",
+              "Authorization" : sessionStorage.getItem('token')
+          },
+        }).then(res=>res.json())
+        if(res.username){
+          alert("안녕하세요 "+res.username+"님");
+        }else{
+          alert("로그인이 필요합니다")
+        }
+        }
+        function clickTr(){
+          $("#table tr").click(function(){
+            if($(this)[0].children[0].textContent!='no')
+              location.href='/board/'+$(this)[0].children[0].textContent;
+        });
+        }
+      </script>
 		<style>
 
     </style>
@@ -42,49 +151,27 @@
 
 	      </div>
     	</nav>
-
         <!-- Page Content  -->
       <div id="content" class="p-4 p-md-5">
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-
-            <button type="button" id="sidebarCollapse" class="btn btn-primary">
-              <i class="fa fa-bars"></i>
-              <span class="sr-only">Toggle Menu</span>
-            </button>
-            <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fa fa-bars"></i>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-              </ul>
+        <div id='login_wrapper' >
+          <div style='width:100%'>
+            <div class='btn_group' >
+            <button type="button"  id='login' onClick="location.href='/login.html'" class='button' >로그인</button> 
+            <button type="button"  id='signup' onClick="location.href='/signup.html'" class='button' >회원가입</button>
+            <button type="button"  id='profile' onClick="profile()" class='button' >프로필</button>
+            <button type="button"  id='logout' onClick="logout()" class='button' >로그아웃</button>
+            <button type="button"  onClick="toCreatePage()" class='button' >글쓰기</button>
             </div>
           </div>
-        </nav>
-
-        <h2 class="mb-4">Sidebar #01</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
+          <div>
+          <table class="type07" id="table" >
+          <thead id='thead'>
+          </thead>
+          <tbody  id="tbody"  >
+          </tbody>
+          </div>
+          </div>
+        </div>
 		</div>
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
   </body>
 </html>
