--- a/static/content/create.html
+++ b/static/content/create.html
@@ -4,10 +4,13 @@
   	<title>Star-ho</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
     <script src="//code.jquery.com/jquery-3.3.1.js"></script>
     <link rel="stylesheet" href="/css/main.css">   
      <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
     <script>
       function logout(){
         sessionStorage.removeItem('token')
@@ -68,7 +71,7 @@
 		<style>
 
     </style>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 		<link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
@@ -110,11 +113,11 @@
             </div>
           </div>
           <div style="border: solid #510101 2px;margin-top: 1px;padding: 1%;width: 100%;">
-            <div>
+            <div style="height: 4rem;">
                 <h2 style='width:12%; float:left;' class='h2'>제목</h2>
-                <input type="text" style="float:left;width:50%; height: 10%; "  placeholder="제목을 입력해 주세요" />
+                <input type="text" style="float:left; width:24rem; height: 2.5rem; margin-top: 0.25rem;"  placeholder="제목을 입력해 주세요" />
               </div>
-            <textarea id="text" placeholder="내용을 입력해 주세요" style='resize: none;' /></textarea>
+            <textarea id="text" placeholder="내용을 입력해 주세요" style='width: 30rem; height: 25rem;' /></textarea>
             </div>
           </div>
         </div>
